--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/react.avif" alt="" /></a>
+									<a href="#" class="image"><img src="images/1FAB26E0-1B70-4999-A533-D18F047722D8.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Mobile App development</h2>
 										<p> 
